(fix:overflow) add overflow : hidden in html and body for preventing scrolling

--- a/general.css
+++ b/general.css
@@ -5,6 +5,11 @@
   font-family: Arial;
 }
 
+html, body {
+  height: 100%;
+  overflow: hidden; 
+}
+
 p{
   margin: 0;
 }
