--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial;
+  box-sizing: border-box;
 }
 
 p{
